--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شركة مياه أسيوط - المركز الإعلامي</title>
+    <title>شركة مياه أسيوط - GitHub Pages</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root { --main-blue: #005294; }
-        body { background-color: #f4f7f6; font-family: 'Cairo', sans-serif; }
+        body { background-color: #f4f7f6; font-family: 'Cairo', sans-serif; margin: 0; }
         .header-bg { background: white; padding: 20px 0; border-bottom: 4px solid var(--main-blue); box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo-img { max-width: 350px; width: 100%; height: auto; }
         .news-card { border: none; border-radius: 15px; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.08); transition: 0.3s; height: 100%; overflow: hidden; }
-        .news-card:hover { transform: translateY(-10px); }
-        .img-box { height: 200px; position: relative; background: #ddd; }
+        .news-card:hover { transform: translateY(-8px); }
+        .img-box { height: 210px; position: relative; background: #eee; overflow: hidden; }
         .img-box img { width: 100%; height: 100%; object-fit: cover; }
-        .news-date { position: absolute; bottom: 10px; right: 10px; background: var(--main-blue); color: white; padding: 3px 10px; border-radius: 5px; font-size: 0.75rem; }
-        .card-body { padding: 15px; }
-        .card-title { font-size: 1rem; font-weight: 700; height: 3em; overflow: hidden; line-height: 1.5; color: #333; }
-        .btn-detail { background: var(--main-blue); color: white; display: block; text-align: center; padding: 10px; border-radius: 8px; text-decoration: none; font-weight: bold; margin-top: 15px; }
-        #loader { text-align: center; padding: 100px 0; }
+        .news-date { position: absolute; bottom: 10px; right: 10px; background: var(--main-blue); color: white; padding: 4px 10px; border-radius: 6px; font-size: 0.75rem; }
+        .card-body { padding: 18px; display: flex; flex-direction: column; }
+        .card-title { font-size: 1rem; font-weight: 700; height: 3.2em; overflow: hidden; line-height: 1.6; color: #333; margin-bottom: 15px; }
+        .btn-detail { background: var(--main-blue); color: white; border-radius: 10px; padding: 10px; text-decoration: none; text-align: center; font-weight: bold; margin-top: auto; }
+        #loader { text-align: center; padding: 80px 0; }
     </style>
 </head>
 <body>
@@ -28,19 +28,20 @@
 <header class="header-bg mb-5">
     <div class="container text-start">
         <img src="logo.png" alt="Logo" class="logo-img" onerror="this.src='https://ascww.org/logo.png'">
-        <h3 class="mt-3" style="color:var(--main-blue); border-right: 4px solid var(--main-blue); padding-right: 15px;">الأخبار العاجلة</h3>
+        <h3 class="mt-3" style="color:var(--main-blue); border-right: 5px solid var(--main-blue); padding-right: 15px;">المركز الإعلامي</h3>
     </div>
 </header>
 
 <div class="container pb-5">
     <div id="news-grid" class="row g-4"></div>
     <div id="loader">
-        <div class="spinner-grow text-primary"></div>
-        <p class="mt-3 text-muted">يتم الآن الاتصال بسيرفر الشركة وجلب الصور...</p>
+        <div class="spinner-border text-primary"></div>
+        <p class="mt-3 text-muted">جاري تحميل الأخبار من خادم الشركة...</p>
     </div>
 </div>
 
 <script>
+    // روابط التخزين والـ API
     const STORAGE_URL = "https://backend.ascww.org/storage/";
     const API_URL = "https://backend.ascww.org/api/news";
 
@@ -49,8 +50,8 @@
         const loader = document.getElementById('loader');
 
         try {
-            // استخدام بروكسي "AllOrigins" مع إضافة متغير عشوائي لتجنب الكاش
-            const response = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(API_URL)}&timestamp=${new Date().getTime()}`);
+            // استخدام بروكسي AllOrigins لتفادي حظر المتصفح (ضروري جداً لـ GitHub)
+            const response = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(API_URL)}`);
             const raw = await response.json();
             const data = JSON.parse(raw.contents);
             const items = data.data || data;
@@ -59,32 +60,32 @@
             grid.innerHTML = "";
 
             items.forEach(item => {
-                // استخراج الصورة من مصفوفة news_images
                 const imgData = item.news_images.find(i => i.main_image === 1) || item.news_images[0];
                 const fullPath = imgData ? STORAGE_URL + imgData.path : "";
                 
-                // استخدام وسيط صور Weserv لتخطي حظر الصور في البيئة المحلية
-                const safeImg = fullPath ? `https://images.weserv.nl/?url=${encodeURIComponent(fullPath)}&w=400&h=300&fit=cover` : 'https://via.placeholder.com/400x300';
+                // وسيط الصور weserv يضمن ظهور الصور على HTTPS
+                const safeImg = fullPath ? `https://images.weserv.nl/?url=${encodeURIComponent(fullPath)}&w=500&h=350&fit=cover` : 'https://via.placeholder.com/500x350';
                 
                 const dateAr = new Date(item.created_at).toLocaleDateString('ar-EG', {day:'numeric', month:'long', year:'numeric'});
 
                 const html = `
-                    <div class="col-md-4">
+                    <div class="col-md-6 col-lg-4">
                         <div class="news-card">
                             <div class="img-box">
-                                <img src="${safeImg}" onerror="this.src='https://via.placeholder.com/400x300?text=جاري+تحميل+الصورة...'">
+                                <img src="${safeImg}" alt="News Image">
                                 <div class="news-date">${dateAr}</div>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">${item.title}</h5>
-                                <a href="details.html?id=${item.id}" class="btn-detail">عرض الخبر كاملاً</a>
+                                <a href="details.html?id=${item.id}" class="btn-detail">تفاصيل الخبر</a>
                             </div>
                         </div>
                     </div>`;
                 grid.insertAdjacentHTML('beforeend', html);
             });
         } catch (err) {
-            loader.innerHTML = `<div class="alert alert-danger">حدث خطأ أثناء الاتصال. تأكد من فتح الملف عبر Live Server في VS Code.</div>`;
+            console.error(err);
+            loader.innerHTML = `<div class="alert alert-danger">حدث خطأ في جلب البيانات. قد يكون سيرفر الشركة متوقفاً حالياً أو يرفض الطلبات الخارجية.</div>`;
         }
     }
 
